--- a/app/src/main/res/layout/activity_lesson_detail.xml
+++ b/app/src/main/res/layout/activity_lesson_detail.xml
@@ -1,31 +1,31 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
-    android:orientation="vertical">
+    android:background="@color/white">
 
-    <include layout="@layout/include_toolbar" />
 
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/margin_10"
-        android:scaleType="fitXY"
-        android:src="@drawable/temp_00" />
 
 
     <ScrollView
+        android:id="@+id/sv"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginTop="@dimen/margin_10"
-        android:layout_weight="5">
+        android:layout_height="match_parent"
+        >
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
 
+            <include layout="@layout/include_toolbar" />
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/margin_10"
+                android:scaleType="fitXY"
+                android:src="@drawable/temp_00" />
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -163,10 +163,10 @@
                 android:text="课程介绍" />
 
             <TextView
+                android:padding="@dimen/padding_10"
                 android:id="@+id/lesson_intro"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                 />
+                android:layout_height="wrap_content" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -192,10 +192,17 @@
                     android:text="(12354人评价)" />
             </LinearLayout>
 
-            <ListView
+            <!--  <com.gym.ui.widget.LoadRefreshLayout
+                  android:id="@+id/swipe"
+                  android:layout_width="match_parent"
+                  android:layout_height="match_parent">-->
+
+            <com.gym.ui.widget.ListViewForScrollView
+
                 android:id="@+id/access_lv"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
+            <!--</com.gym.ui.widget.LoadRefreshLayout>-->
 
         </LinearLayout>
 
@@ -203,8 +210,8 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
         android:background="@color/dark_grey">
 
         <TextView
@@ -241,4 +248,4 @@
             android:text="购买" />
 
     </RelativeLayout>
-</LinearLayout>
+</FrameLayout>
