--- a/app/src/main/res/layout/item_access.xml
+++ b/app/src/main/res/layout/item_access.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="@dimen/padding_7"
-    android:background="@drawable/cellbg2">
+    android:background="@color/white">
 
     <TextView
         android:id="@+id/name"
