--- a/app/src/main/res/layout/item_commit.xml
+++ b/app/src/main/res/layout/item_commit.xml
@@ -44,14 +44,14 @@
             android:textSize="@dimen/text_13" />
     </RelativeLayout>
 
-    <MultiAutoCompleteTextView
+    <TextView
         android:padding="@dimen/padding_7"
         android:id="@+id/commit_content"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@null"
         android:gravity="center_vertical"
-        android:lines="1" />
+        />
 
     <RelativeLayout
         android:padding="@dimen/padding_10"
