--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,161 +8,187 @@
     android:orientation="vertical"
     android:scaleType="fitXY"
     custom:designHeight="615dp"
-    custom:designWidth="384dp"
-   >
-<RelativeLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <ImageView
-        android:id="@+id/icon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/pic_10"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="@dimen/margin_150"
-        />
+    custom:designWidth="384dp">
 
-    <LinearLayout
-        android:layout_below="@id/icon"
-        android:id="@+id/userName"
-        style="@style/LoginWidget"
-        android:layout_marginTop="@dimen/margin_150"
-        android:background="@drawable/shape_login"
-        >
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_margin="@dimen/margin_10"
-            android:src="@drawable/pic_3"/>
-        <EditText
-            android:id="@+id/user_et"
-            android:layout_width="match_parent"
-            android:background="@null"
-            android:gravity="left|center_vertical"
-            android:hint="Email Address"
-            android:textColorHint="@color/lighter_grey"
-            android:layout_height="match_parent" />
-    </LinearLayout>
-    <LinearLayout
-        android:layout_below="@id/userName"
-        android:id="@+id/pwd"
-        android:layout_marginTop="@dimen/margin_5"
-        android:background="@drawable/shape_login"
-       style="@style/LoginWidget"
-        >
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_margin="@dimen/margin_10"
-            android:src="@drawable/pic_4"/>
-        <EditText
-            android:id="@+id/pwd_et"
-            android:layout_width="match_parent"
-            android:background="@null"
-            android:gravity="left|center_vertical"
-            android:hint="Password"
-            android:inputType="textPassword"
-            android:textColorHint="@color/lighter_grey"
-            android:layout_height="match_parent" />
-    </LinearLayout>
-    <LinearLayout
-        android:layout_below="@id/pwd"
-        android:id="@+id/buttons"
-        android:layout_marginTop="@dimen/margin_10"
-        style="@style/LoginWidget"
-        >
-
-        <Button
-            android:id="@+id/login_person"
-            android:layout_width="0dp"
-            android:text="@string/login_user"
-            style="@style/LoginButton"
-            android:layout_marginRight="@dimen/margin_1"
-            android:layout_weight="1"
-            android:layout_height="wrap_content" />
-        <Button
-            android:id="@+id/login_coach"
-            style="@style/LoginButton"
-            android:layout_marginLeft="@dimen/margin_1"
-            android:layout_width="0dp"
-            android:text="@string/login_coach"
-            android:layout_weight="1"
-            android:layout_height="wrap_content" />
-    </LinearLayout>
-    <LinearLayout
-        android:layout_below="@id/buttons"
-        android:id="@+id/text"
-        android:layout_marginTop="@dimen/margin_10"
-        style="@style/LoginWidget"
-        >
-        <TextView
-            android:id="@+id/register"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/login_register"
-            android:textColor="@color/lighter_grey"
-            android:textSize="@dimen/text_18"
-            android:textStyle="bold"
-            android:gravity="start"/>
-        <TextView
-            android:id="@+id/forgetPwd"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/login_forgetPwd"
-            android:gravity="end"
-            android:textColor="@color/lighter_grey"
-            android:textSize="@dimen/text_18"
-            android:textStyle="bold"
-           />
-
-    </LinearLayout>
-    <TextView
-        android:layout_below="@id/text"
-        android:id="@+id/text2"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/login_otherway"
-        android:gravity="center"
-        android:layout_marginTop="@dimen/margin_10"
-        android:textColor="@color/lighter_grey"
-        android:textSize="@dimen/text_16"
-        android:textStyle="bold"
-        />
-    <LinearLayout
-        android:layout_below="@id/text2"
-        android:layout_marginTop="@dimen/margin_5"
-        android:gravity="center"
-        style="@style/LoginWidget"
-        >
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
+        android:layout_height="match_parent">
 
-            android:src="@drawable/pic_5"/>
         <ImageView
+            android:id="@+id/icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginRight="@dimen/margin_40"
-            android:layout_marginLeft="@dimen/margin_40"
-            android:src="@drawable/pic_6"/>
-        <ImageView
-            android:id="@+id/qqLogin"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:src="@drawable/pic_7"/>
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="@dimen/margin_150"
+            android:src="@drawable/pic_10" />
 
-    </LinearLayout></RelativeLayout>
+        <LinearLayout
+            android:id="@+id/userName"
+            style="@style/LoginWidget"
+            android:layout_below="@id/icon"
+            android:layout_marginTop="@dimen/margin_150"
+            android:background="@drawable/shape_login">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_margin="@dimen/margin_10"
+                android:src="@drawable/pic_3" />
+
+            <EditText
+                android:id="@+id/user_et"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@null"
+                android:gravity="left|center_vertical"
+                android:hint="Email Address"
+                android:textColorHint="@color/lighter_grey" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/pwd"
+            style="@style/LoginWidget"
+            android:layout_below="@id/userName"
+            android:layout_marginTop="@dimen/margin_5"
+            android:background="@drawable/shape_login">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_margin="@dimen/margin_10"
+                android:src="@drawable/pic_4" />
+
+            <EditText
+                android:id="@+id/pwd_et"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@null"
+                android:gravity="left|center_vertical"
+                android:hint="Password"
+                android:inputType="textPassword"
+                android:textColorHint="@color/lighter_grey" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/buttons"
+            style="@style/LoginWidget"
+            android:layout_below="@id/pwd"
+            android:layout_marginTop="@dimen/margin_10">
+
+            <Button
+                android:id="@+id/login_person"
+                style="@style/LoginButton"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="@dimen/margin_1"
+                android:layout_weight="1"
+                android:text="@string/login_user" />
+
+            <Button
+                android:id="@+id/login_coach"
+                style="@style/LoginButton"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/margin_1"
+                android:layout_weight="1"
+                android:text="@string/login_coach" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/text"
+            style="@style/LoginWidget"
+            android:orientation="horizontal"
+            android:layout_below="@id/buttons"
+            android:layout_marginTop="@dimen/margin_10">
+
+            <TextView
+                android:id="@+id/register"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:gravity="left"
+                android:text="@string/login_register"
+                android:textColor="@color/lighter_grey"
+                android:textSize="@dimen/text_18"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/guide"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="@string/login_guide"
+                android:textColor="@color/lighter_grey"
+                android:textSize="@dimen/text_18"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/forgetPwd"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:gravity="right"
+                android:text="@string/login_forgetPwd"
+                android:textColor="@color/lighter_grey"
+                android:textSize="@dimen/text_18"
+                android:textStyle="bold" />
+
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/text2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/text"
+            android:layout_marginTop="@dimen/margin_10"
+            android:gravity="center"
+            android:text="@string/login_otherway"
+            android:textColor="@color/lighter_grey"
+            android:textSize="@dimen/text_16"
+            android:textStyle="bold" />
+
+        <LinearLayout
+            style="@style/LoginWidget"
+            android:layout_below="@id/text2"
+            android:layout_marginTop="@dimen/margin_5"
+            android:gravity="center">
+
+            <ImageView
+                android:id="@+id/weiboLogin"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+
+                android:src="@drawable/pic_5" />
+
+            <ImageView
+                android:id="@+id/winxinLogin"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginLeft="@dimen/margin_40"
+                android:layout_marginRight="@dimen/margin_40"
+                android:src="@drawable/pic_6" />
+
+            <ImageView
+                android:id="@+id/qqLogin"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:src="@drawable/pic_7" />
+
+        </LinearLayout>
+    </RelativeLayout>
+
     <ProgressBar
         android:id="@+id/login_loading"
         style="@style/ProgressBarBig"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:visibility="gone"/>
+        android:visibility="gone" />
 </me.dreamheart.autoscalinglayout.ASFrameLayout>
