--- a/app/src/main/res/layout/activity_input_lesson.xml
+++ b/app/src/main/res/layout/activity_input_lesson.xml
@@ -4,6 +4,7 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     android:orientation="vertical"
+    android:id="@+id/root"
     tools:context=".MainActivity">
 
     <include layout="@layout/include_toolbar" />
@@ -47,6 +48,8 @@
                     android:layout_height="40dp"
                     android:layout_below="@id/name_tv"
                     android:background="@drawable/shape_login"
+                    android:gravity="center_vertical"
+                    android:padding="@dimen/padding_5"
                     android:hint="Name"
                     android:textColorHint="@color/lighter_grey" />
 
@@ -95,6 +98,8 @@
 
                 <MultiAutoCompleteTextView
                     android:id="@+id/lesson_intro"
+                    android:gravity="top"
+                    android:padding="@dimen/padding_5"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/shape_login"
@@ -129,6 +134,8 @@
                         android:background="@drawable/shape_login">
 
                         <EditText
+                            android:gravity="center_vertical"
+                            android:padding="@dimen/padding_5"
                             android:id="@+id/lesson_people"
                             android:layout_width="0dp"
                             android:layout_height="match_parent"
@@ -177,6 +184,8 @@
                             android:layout_weight="4"
                             android:layout_height="match_parent"
                             android:background="@null"
+                            android:gravity="center_vertical"
+                            android:padding="@dimen/padding_5"
                             android:textColorHint="@color/lighter_grey" />
 
                         <ImageView
@@ -224,6 +233,8 @@
                             android:id="@+id/lesson_time"
                             android:layout_width="0dp"
                             android:layout_weight="4"
+                            android:gravity="center_vertical"
+                            android:padding="@dimen/padding_5"
                             android:layout_height="match_parent"
                             android:background="@null"
                             android:textColorHint="@color/lighter_grey" />
@@ -268,7 +279,8 @@
                             android:layout_weight="4"
                             android:layout_height="match_parent"
                             android:background="@null"
-
+                            android:gravity="center_vertical"
+                            android:padding="@dimen/padding_5"
                             android:textColorHint="@color/lighter_grey" />
 
                         <TextView
@@ -285,47 +297,104 @@
                 </RelativeLayout>
             </LinearLayout>
 
-            <RelativeLayout
-                android:layout_width="160dp"
-                android:layout_height="wrap_content"
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:layout_marginTop="@dimen/margin_10"
-                >
+                android:orientation="horizontal">
 
-                <TextView
-                    android:id="@+id/fit"
-                    style="@style/edittext"
-                    android:layout_width="wrap_content"
+                <RelativeLayout
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="@dimen/margin_2"
-                    android:text="健身馆" />
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="40dp"
-                    android:layout_below="@id/fit"
-                    android:layout_marginRight="@dimen/margin_10"
-                    android:background="@drawable/shape_login">
+                    >
 
                     <TextView
-                        android:id="@+id/fit_et"
-                        android:layout_width="0dp"
-                        android:layout_weight="4"
-                        android:layout_height="match_parent"
-                        android:background="@null"
-                        android:textColorHint="@color/lighter_grey" />
-
-                    <ImageView
-
-                        android:layout_width="0dp"
-                        android:layout_weight="1"
+                        android:id="@+id/fit"
+                        style="@style/edittext"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="right|center_vertical"
-                        android:layout_marginRight="@dimen/margin_5"
-                        android:src="@drawable/right_arrow"
+                        android:layout_marginBottom="@dimen/margin_2"
+                        android:text="健身馆" />
 
-                        />
-                </LinearLayout>
-            </RelativeLayout>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="40dp"
+                        android:layout_below="@id/fit"
+                        android:layout_marginRight="@dimen/margin_10"
+                        android:background="@drawable/shape_login">
+
+                        <TextView
+                            android:id="@+id/fit_et"
+                            android:layout_width="0dp"
+                            android:layout_weight="4"
+                            android:layout_height="match_parent"
+                            android:background="@null"
+                            android:gravity="center_vertical"
+                            android:padding="@dimen/padding_5"
+                            android:textColorHint="@color/lighter_grey" />
+
+                        <ImageView
+
+                            android:layout_width="0dp"
+                            android:layout_weight="1"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="right|center_vertical"
+                            android:layout_marginRight="@dimen/margin_5"
+                            android:src="@drawable/right_arrow"
+
+                            />
+                    </LinearLayout>
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+
+                    android:layout_weight="1">
+
+                    <TextView
+                        android:id="@+id/category_tv"
+                        style="@style/edittext"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="@dimen/margin_2"
+                        android:text="选择种类" />
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="40dp"
+                        android:layout_below="@id/category_tv"
+                        android:layout_marginRight="@dimen/margin_10"
+                        android:background="@drawable/shape_login">
+
+                        <TextView
+                            android:id="@+id/category"
+                            android:layout_width="0dp"
+                            android:layout_weight="4"
+                            android:layout_height="match_parent"
+                            android:background="@null"
+                            android:gravity="center_vertical"
+                            android:padding="@dimen/padding_5"
+                            android:textColorHint="@color/lighter_grey" />
+
+                        <ImageView
+
+                            android:layout_width="0dp"
+                            android:layout_weight="1"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="right|center_vertical"
+                            android:layout_marginRight="@dimen/margin_5"
+                            android:src="@drawable/right_arrow"
+
+                            />
+                    </LinearLayout>
+                </RelativeLayout>
+            </LinearLayout>
+
 
         </LinearLayout>
 
