--- a/app/src/main/res/layout/address_item.xml
+++ b/app/src/main/res/layout/address_item.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@color/white"
     android:orientation="vertical" >
-    <TextView android:layout_width="fill_parent"
+    <TextView android:layout_width="match_parent"
     android:layout_height="wrap_content"
+        android:padding="@dimen/padding_10"
     android:id="@+id/tv_addr"
     android:gravity="center"
     android:textColor="@color/light_grey"
