--- a/app/src/main/res/layout/item_collect.xml
+++ b/app/src/main/res/layout/item_collect.xml
@@ -8,8 +8,8 @@
 
     <ImageView
         android:id="@+id/collect_img"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/width_60"
+        android:layout_height="@dimen/height_60"
         android:src="@drawable/photo_buy" />
 
     <TextView
