--- a/app/src/main/res/layout/menu_center.xml
+++ b/app/src/main/res/layout/menu_center.xml
@@ -2,12 +2,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/white"
+
         android:orientation="vertical">
 
 
@@ -22,6 +23,22 @@
             android:textColor="@color/light_grey"
             android:textSize="@dimen/text_13" />
         <View style="@style/verticalLine" />
+        <TextView
+            android:id="@+id/collect_tv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_margin="@dimen/margin_10"
+            android:gravity="center"
+            android:text="我的收藏"
+            android:textColor="@color/light_grey"
+            android:textSize="@dimen/text_13" />
+        <View style="@style/verticalLine" />
+        <LinearLayout
+            android:id="@+id/userLL"
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
         <TextView
             android:id="@+id/comment_tv"
             android:layout_width="match_parent"
@@ -57,7 +74,24 @@
             android:textColor="@color/light_grey"
             android:textSize="@dimen/text_13" />
         <View style="@style/verticalLine" />
+        <TextView
+            android:id="@+id/editInfo_tv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_margin="@dimen/margin_10"
+            android:gravity="center"
+            android:text="个人资料"
+            android:textColor="@color/light_grey"
+            android:textSize="@dimen/text_13" />
 
+
+        </LinearLayout>
+        <LinearLayout
+            android:id="@+id/coachLL"
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
         <TextView
             android:id="@+id/orderManager_tv"
             android:layout_width="match_parent"
@@ -70,17 +104,7 @@
             android:textSize="@dimen/text_13" />
         <View style="@style/verticalLine" />
 
-        <TextView
-            android:id="@+id/editInfo_tv"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_margin="@dimen/margin_10"
-            android:gravity="center"
-            android:text="个人资料"
-            android:textColor="@color/light_grey"
-            android:textSize="@dimen/text_13" />
-        <View style="@style/verticalLine" />
+
 
         <TextView
             android:id="@+id/publishLesson_tv"
@@ -104,18 +128,7 @@
             android:text="教练信息"
             android:textColor="@color/light_grey"
             android:textSize="@dimen/text_13" />
-        <View style="@style/verticalLine" />
-
-        <TextView
-            android:id="@+id/collect_tv"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_margin="@dimen/margin_10"
-            android:gravity="center"
-            android:text="我的收藏"
-            android:textColor="@color/light_grey"
-            android:textSize="@dimen/text_13" />
+         </LinearLayout>
     </LinearLayout>
 
 
